User endpoints & Doc
